introduce HashKeyMap
this ensures a map of CharSequence allows different implementations using hasCode()